--- a/{{cookiecutter.project_slug}}/public/index.html
+++ b/{{cookiecutter.project_slug}}/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{cookiecutter.app_name}}</title>
+    <title>{{cookiecutter.project_name}}</title>
 </head>
 <body>
     <div id="root"></div>
